@@ -14,11 +14,13 @@ TODO :
 	vm : fixed comparison of bool
 	vm : moved threads stuff into threads.c
 	nekoml : fixed lexing engine, allow escape sequences in char groups
-	mysql : fixed conv_date storage to prevent finalizer cycle
 	mysql : link with thread_safe version on linux
-	std : fixed mthreads issues with host_resolve and host_reverse
+	std : fixed threads issues with host_resolve and host_reverse
 	libs : compile with -pthread on linux/osx to ensure thread safety
 	main : turned ON jit by default for bootable executables
+	std : added set_trusted primitive
+	vm : use gc alloc_ignore_off_page for large blocks
+	vm : use gc finalizers with no_order (prevent cycles)
 
 2008-07-28 : 1.7.1
 	nekotools : fixed set_return_code in web server
